objects/Daily_Site_Report__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <inlineHelpText>If Daily Site Report Name is blank, upon change this will automatically combine with Project Name to create Daily Site Report Name.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incidents_Including_Near_Misses__c</fullName>
        <label>Incidents, Including Near Misses</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspections_and_Meetings__c</fullName>
        <label>Inspections and Meetings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issues_and_Comments__c</fullName>
        <label>Issues and Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_1__c</fullName>
        <label>Notes 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_2__c</fullName>
        <label>Notes 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Progress__c</fullName>
        <label>Overall Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Project_Status__c</fullName>
        <formula>TEXT(Project__r.Overall_Project_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from the related Project</inlineHelpText>
        <label>Overall Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Site__r.Project_Manager__r.FirstName + &apos; &apos; +  Site__r.Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the related Project</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Daily Site Reports</relationshipLabel>
        <relationshipName>Daily_Site_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <formula>Site__r.Site_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays site address of related Site</inlineHelpText>
        <label>Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_City__c</fullName>
        <formula>Site__r.Site_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the site city of the related Site</inlineHelpText>
        <label>Site City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Date__c</fullName>
        <formula>Site__r.Site_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the site state of the related Site</inlineHelpText>
        <label>Site Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Install_Type__c</fullName>
        <formula>IF(INCLUDES(Site__r.Type__c , &quot;Fixed Ground&quot; ), &quot;Fixed Ground;&quot;,null ) &amp; 
IF(INCLUDES(Site__r.Type__c , &quot;Roof&quot; ),         &quot;Roof; &quot;,null ) &amp; 
IF(INCLUDES(Site__r.Type__c , &quot;SSS&quot; ),          &quot;SSS; &quot;,null ) &amp; 
IF(INCLUDES(Site__r.Type__c , &quot;Tracker&quot; ),      &quot;Tracker; &quot;,null ) &amp; 
IF(INCLUDES(Site__r.Type__c , &quot;Landfill&quot; ),     &quot;Landfill; &quot;,null ) &amp;
IF(INCLUDES(Site__r.Type__c , &quot;Multiple&quot; ),     &quot;Landfill; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Values brought in from the related Site</inlineHelpText>
        <label>Site Install Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <formula>TEXT(Site__r.Site_State__c)</formula>
        <inlineHelpText>Displays the site state of the related Site</inlineHelpText>
        <label>Site State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Supervisor__c</fullName>
        <formula>Site__r.Site_Superintendent__r.FirstName + &apos; &apos;  + Site__r.Site_Superintendent__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from the related Site</inlineHelpText>
        <label>Site Superintendent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Zip__c</fullName>
        <formula>Site__r.Site_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the site zip code for the related Site</inlineHelpText>
        <label>Site Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the related Site</inlineHelpText>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Daily Site Reports</relationshipLabel>
        <relationshipName>Daily_Site_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Today_s_Temperature__c</fullName>
        <inlineHelpText>Enter the temperature at the time of the site visit</inlineHelpText>
        <label>Today&apos;s Temperature (F)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verify_all_Workers_Have_Been_Oriented__c</fullName>
        <label>Verify all Workers Have Been Oriented</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weather_Conditions_Today__c</fullName>
        <inlineHelpText>Select the overall weather condition for the day</inlineHelpText>
        <label>Weather Conditions Today</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunny</fullName>
                </value>
                <value>
                    <fullName>Partly Sunny</fullName>
                </value>
                <value>
                    <fullName>Cloudy</fullName>
                </value>
                <value>
                    <fullName>Rainy</fullName>
                </value>
                <value>
                    <fullName>Snowy</fullName>
                </value>
                <value>
                    <fullName>Mix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X48_Hour_Forecast__c</fullName>
        <label>48 Hour Forecast</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X48_Hour_Temp__c</fullName>
        <label>48 Hour Temp</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Daily Site Report</label>
    <nameField>
        <label>Daily Site Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Site Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Procore_projects</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT( ISBLANK( Project__r.Procore_Project_ID__c )) ,
((NOW()-CreatedDate)*10000) &lt; 1
)</errorConditionFormula>
        <errorMessage>This project is being managed in Procore.</errorMessage>
    </validationRules>
</CustomObject>